# glider

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Glider_Evolution.ipynb  README.md  compose.yaml  constants.py  drop_test_search.ipynb  glider.py  glider.xml  glider_inspection.ipynb  observability.py  optimization.py  package-lock.json  pyproject.toml  requirements-dev.txt  requirements.txt  shape_transformation.ipynb  simulate.ipynb  simulate_archive.ipynb  simulate_metal.ipynb  simulation.py  vehicle.py  visualize.py  walkthrough.ipynb  wing.py  xml_utils.py
assets/: aerofoil_drop_test.xml  cuboid_drop_test.xml  delta_plane.stl  drop_test.xml  world.xml  world_cuboid_1.xml
backend/: requirements.txt
backend/glider/: database.py  ga.py  models.py  optimization.py
backend/notebooks/: brax_visualisation.ipynb  cuboid_extrusion_iteration.ipynb  walkthrough_with_pilot.ipynb  world.xml
backend/tests/: test_vehicle.py
docker/: Dockerfile  docker-compose.yaml
notebooks/: 2d_extrusion.ipynb  aerofoil_drop_test.xml  brax_visualisation.ipynb  cuboid_drop_test.xml  cuboid_extrusion_iteration.ipynb  database_test.ipynb  glider_inspection.ipynb  shape_transformation.ipynb  visual_test_notebook.ipynb  walkthrough copy.ipynb  walkthrough.ipynb  walkthrough_concave_surfaces.ipynb  walkthrough_v1.ipynb  walkthrough_with_pilot.ipynb  world.xml
src/glider/: constants.py  database.py  ga.py  observability.py  optimization.py  vehicle.py  (+2 more)
tests/: test_glider.py  test_optimization.py  test_vehicle.py  test_visualize.py  visual_test_notebook.ipynb  world.xml
(+5 files in other folders)
