[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[tool.poetry]
name = "glider"
version = "0.2.0"
description = "An evolutionary glider simulator"
authors = ["Luan van Pletsen <luanvanpletsen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
numpy = "^1.21.2"
mediapy = "1.1.9"
mujoco = "2.3.7"
pandas = "^1.3.3"
trimesh = "^3.9.28"
jupyter = "^1.0.0"


[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
mypy = "^0.910"
flake8 = "^3.9.2"
black = "^21.9b0"
